# HimuOJ

./: .gitattributes  .gitignore  Himu.sln  README.md
Himu.Common.Base/Result/: Result.cs
Himu.Common.Utility/: Himu.Common.Service.csproj
Himu.Common.Utility/JudgeCoreService/: IJudgeCoreService.cs  JudgeCoreConfiguration.cs  JudgeCoreProtocol.cs  JudgeCoreServiceExtensions.cs  JudgeSocketService.cs
Himu.Common.Utility/MailSender/: IMailSenderService.cs  MailSenderOptions.cs  MailSenderService.cs  MailSenderServiceExtensions.cs  MailTemplate.cs
Himu.Common.Utility/UserJwtManager/: IUserJwtManager.cs  JwtOptions.cs  UserJwtManager.cs  UserJwtManagerExtensions.cs
Himu.EntityFramework.Core/: Himu.EntityFramework.Core.csproj  HimuMySqlContext.cs
Himu.EntityFramework.Core/Configuration/: ChatMessageEntityConfiguration.cs  CompilerPresetEntityConfiguration.cs  ContestProblemCodeEntityConfiguration.cs  HimuArticleEntityConfiguration.cs  HimuCommitEntityConfiguration.cs  HimuContestEntityConfiguration.cs  HimuHomeUserEntityConfiguration.cs  HimuProblemEntityConfiguration.cs  HimuTestPointEntityConfiguration.cs  PermissionRecordEntityConfiguration.cs  TestPointResultEntityConfiguration.cs  UserChatSessionEntityConfiguration.cs  UserFriendEntityConfiguration.cs
Himu.EntityFramework.Core/Contests/: HimuContext.cs  HimuIdentityContext.cs  HimuMySqlContextFactory.cs  HimuOnlineJudgeContext.cs
Himu.EntityFramework.Core/Entity/: ChatMessage.cs  CompilerPreset.cs  ContestCreator.cs  ContestProblemCode.cs  ExecutionStatus.cs  HimuArticle.cs  HimuCommit.cs  (+10 more)
Himu.Home.HttpApi/: Himu.Home.HttpApi.csproj  Program.cs  appsettings.json
Himu.Home.HttpApi.Utility/: Himu.HttpApi.Utility.csproj
HimuJudgeCoreServer/: CMakeLists.txt  CMakeUserPresets.json  cpp.hint  vcpkg-configuration.json  vcpkg.json
HimuJudgeCoreServer/src/: CMakeLists.txt  HimuJudgeCoreServer.cpp  pch.h
HimuJudgeCoreServer/src/procedure/: JudgeProcedure.h
HimuJudgeCoreServer/src/procedure/comparer/: CharComparer.cpp  CharComparer.h  Comparer.h  ComparerBuilder.cpp  LineComparer.cpp  LineComparer.h
HimuJudgeCoreServer/src/procedure/impl/: JudgeWin32Procedure.cpp  JudgeWin32Procedure.h
HimuJudgeCoreServer/src/procedure/process/: Process.cpp  Process.h  ProcessStartInfo.h  ProcessStartInfoBuilder.h
HimuJudgeCoreServer/src/protos/: Judge.grpc.pb.cc  Judge.grpc.pb.h  Judge.pb.cc  Judge.pb.h  build_proto.bat
HimuJudgeCoreServer/src/services/: HimuServices.cpp  HimuServices.h  JudgeService.cpp  JudgeService.h
HimuJudgeCoreServer/src/shared/: Globals.cpp  Shared.h
HimuJudgeCoreServer/src/utils/: FileSystem.cpp  Utils.h  strings.cpp
himu-vite-app/: package.json
himu-vue-client-app/: index.html  package.json  tsconfig.json  vite.config.ts
himu_judge_core/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  UpdateNotes.md
himu_judge_core/src/: CMakeLists.txt  judge_core_server.cpp
himu_judge_core/src/commandline/: command_line_options.cpp  command_line_options.h
himu_judge_core/src/compiler/: base_compiler_provider.h  compile_result.h  compiler_provider.cpp  compiler_provider.h  gcc_compiler_provider.cpp  gcc_compiler_provider.h
himu_judge_core/src/dbcontext/: dbcontext.h  dbcontext_factory.cpp  mysql_dbcontext.cpp  mysql_dbcontext.h
himu_judge_core/src/launcher/: launcher.cpp  launcher.h
himu_judge_core/src/result_compare/: stream_result_compare.h  word_token_reader.cpp  word_token_reader.h
himu_judge_core/src/runcode/: basic_code_runner.cpp  basic_code_runner.h  linux_code_runner.cpp  linux_code_runner.h  runcode.cpp  runcode.h
himu_judge_core/src/server/: judge_request.h  judge_server.cpp  judge_server.h  judge_session.h
himu_judge_core/src/shared/: bits.h  error_code.h  global_variables.h  logger.cpp  logger.h  singleton.h
himu_judge_core/src/shared/config/: app_config.cpp  app_config.h  dbcontext_config.h
himu_judge_core/src/shared/dto/: diff_result.h  exit_code_with_message.h  problem_limilt.h  program_execution_status.h  resource_usage.h  run_code_case_result.h  testpoint.h  testpoint_result.cpp  testpoint_result.h  user_commit.cpp  user_commit.h
himu_judge_core/src/shared/models/mysql/: point_result.h  pointresults.sql  problem.h  problem.sql  test_point.h  testpoints.sql  user_commit.h  user_commit.sql
himu_judge_core/src/shared/utils/: concurrent_queue.hpp  task_pool.h  to_program_execution_status.cpp
(+257 files in other folders)
